--- a/drivers/phy/Kconfig
+++ b/drivers/phy/Kconfig
@@ -510,6 +510,19 @@ config PHY_MESON8B_USB2
 	  and GXBB SoCs.
 	  If unsure, say N.
 
+config PHY_MESON_GXL_USB
+	tristate "Meson GXL and GXM USB2 PHY drivers"
+	default ARCH_MESON
+	depends on OF && (ARCH_MESON || COMPILE_TEST)
+	depends on USB_SUPPORT
+	select USB_COMMON
+	select GENERIC_PHY
+	select REGMAP_MMIO
+	help
+	  Enable this to support the Meson USB2 PHYs found in Meson
+	  GXL and GXM SoCs.
+	  If unsure, say N.
+
 config PHY_NSP_USB3
 	tristate "Broadcom NorthStar plus USB3 PHY driver"
 	depends on OF && (ARCH_BCM_NSP || COMPILE_TEST)
@@ -518,4 +531,5 @@ config PHY_NSP_USB3
 	help
 	  Enable this to support the Broadcom Northstar plus USB3 PHY.
 	  If unsure, say N.
+
 endmenu
